--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,10 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://root:rootpwd@mongo:27017
     depends_on:
       - mongo
+
+  minesweeper-api:
+    image: minesweeper-api:latest
+    ports:
+      - 8088:8088
+    depends_on:
+      - mongo
